--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <button id="requestPermissionButton">알림 권한 요청</button>
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
